[gd_scene load_steps=10 format=2]

[ext_resource path="res://actor/projectile/Missile.png" type="Texture" id=1]
[ext_resource path="res://control/Damage.gd" type="Script" id=2]
[ext_resource path="res://actor/BaseTarget.tscn" type="PackedScene" id=3]
[ext_resource path="res://effect/trail/Thrust.tscn" type="PackedScene" id=4]
[ext_resource path="res://effect/trail/SmokeTrail.tscn" type="PackedScene" id=5]
[ext_resource path="res://actor/projectile/Missile.gd" type="Script" id=6]
[ext_resource path="res://audio/sfx/Thrust.wav" type="AudioStream" id=7]
[ext_resource path="res://effect/explosion/Explosion.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 22, 12 )

[node name="Missile" instance=ExtResource( 3 )]
script = ExtResource( 6 )
death_effect = ExtResource( 8 )

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource( 1 )

[node name="Sprite" parent="." index="1"]
texture = ExtResource( 1 )

[node name="Thrust" parent="Sprite" index="0" instance=ExtResource( 4 )]
position = Vector2( -14, 0 )

[node name="SmokeTrail" parent="Sprite" index="1" instance=ExtResource( 5 )]
position = Vector2( -24, 0 )

[node name="FollowTarget" parent="." index="2"]
acceleration = 300.0
damping = 100.0
max_speed = 100.0

[node name="Damage" type="Node" parent="." index="4"]
script = ExtResource( 2 )
damage_points = 10

[node name="ThrustSfx" type="AudioStreamPlayer2D" parent="." index="5"]
stream = ExtResource( 7 )
volume_db = -2.0
pitch_scale = 0.8
autoplay = true
max_distance = 500.0

[node name="TypistLabel" parent="." index="6"]
position = Vector2( 0, 26 )
[connection signal="area_entered" from="." to="." method="_on_hit_body"]
[connection signal="body_entered" from="." to="." method="_on_hit_body"]
[connection signal="no_health" from="Health" to="." method="_on_killed" flags=6]
